# blsh

./: .blsh  .gitignore  CLAUDE.md  README.md  kis-open-trading-api  pyproject.toml
backup/: macd_scanner.py
docs/: cron-pipeline.md  data-collection.md  optimize.md  pattern_bonus.md  scanner.md  system_architecture.md  trader.md  한국투자증권_오픈API_전체문서_20260214_030000.xlsx  한국투자증권_오픈API_전체문서_20260409_030000.xlsx
nb/: finance_datareader.ipynb  kis_domestic_stock.ipynb  kis_overseas_stock.ipynb  play.ipynb  pykrx.ipynb
ops/: reminders.yml
src/: blsh.py  po.py
src/blsh/: __init__.py  main.py
src/blsh/common/: dtutils.py  env.py  fileutils.py  timeutil.py
src/blsh/database/: engine.py  models.py  query.py
src/blsh/kis/: kis_auth.py
src/blsh/kis/domestic_stock/: domestic_stock_examples_ws.py  domestic_stock_info.py
src/blsh/kis/stocks_info/: _utils.py  kis_kosdaq_code.py  kis_kospi_code.py  sector_code.py  theme_code.py
src/blsh/krx/: api.py  auth.py  krx_api.py  krx_auth.py  store.py
src/blsh/krx/krx_data/: __init__.py  idx.py  isu.py
src/blsh/wye/domestic/: _factor.py  _kis.py  _po.py  _position.py  backtest.py  backtest_add_position.py  collector.py  optimize.py  optimize_daytrade.py  order.py  reporter.py  scanner.py  simulator.py  trader.py  trader2.py  trader3.py  trader_v2.py
src/blsh/wye/overseas/: overseas_websocket.py
src/wye/blsh/: __init__.py  __main__.py
src/wye/blsh/common/: dtutils.py  env.py  fileutils.py  messageutils.py
src/wye/blsh/database/: __init__.py  models.py  query.py
src/wye/blsh/domestic/: __init__.py  _factor.py  _kis.py  _po.py  _report.py  _sim_core.py  _tick.py  collector.py  config.py  (+15 more)
tests/: test_blsh.py  test_classify_supply.py  test_kis_connection.py  test_krx.py
(+41 files in other folders)
