[project]
name = "blsh"
version = "0.1.0"
description = "buy low sell high"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi==2025.7.9",
    "charset-normalizer==3.4.2",
    "dotenv>=0.9.9",
    "finance-datareader>=0.9.102",
    "httpx>=0.28.1",
    "idna==3.10",
    "jupyterlab>=4.5.5",
    "numpy",
    "openpyxl>=3.1.5",
    "pandas==2.3.3",
    "psycopg2-binary>=2.9.11",
    "pycryptodome==3.23.0",
    "pykernel>=0.1.6",
    "pykrx>=1.2.4",
    "pyqt6==6.9.1",
    "pyqt6-qt6==6.9.1",
    "pyqt6-sip==13.10.2",
    "pyside6==6.9.1",
    "pyside6-addons==6.9.1",
    "pyside6-essentials==6.9.1",
    "pytest>=9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "python-telegram-bot>=22.7",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "setuptools",
    "shiboken6==6.9.1",
    "six==1.17.0",
    "sqlalchemy>=2.0.46",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websockets==15.0.1",
]

[tool.uv]
package=true
