[project]
name = "blsh"
version = "0.1.0"
description = "buy low sell high"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "finance-datareader>=0.9.102",
    "httpx>=0.28.1",
    "jupyterlab>=4.5.5",
    "numba>=0.65.0",
    "numpy",
    "openpyxl>=3.1.5",
    "pandas==2.3.3",
    "psycopg2-binary>=2.9.11",
    "pycryptodome==3.23.0",
    "pykernel>=0.1.6",
    "pykrx>=1.2.4",
    "pyqt6==6.9.1",
    "pyside6==6.9.1",
    "pytest>=9.0.2",
    "python-dotenv==1.0.0",
    "python-telegram-bot>=22.7",
    "pyyaml==6.0.2",
    "setuptools",
    "sqlalchemy>=2.0.46",
    "websockets==15.0.1",
]

[tool.uv]
package=true
